# rgbpc

./: .gitignore  Cargo.toml  README.md
assets/: rgbpc.desktop
src/: main.rs
src/core/: config.rs  hook.rs  mod.rs  openrgb.rs
src/ui/: app.rs
