[package]
name = "rgbpc"
version = "1.0.2"
edition = "2021"
description = "A sleek TUI to manage OpenRGB lights and sync with Omarchy themes"
authors = ["Zeus"]

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
regex = "1.10"
dirs = "5.0"
